Finishing Appian API